# cc-lint

./: .gitignore  CONTRIBUTING.md  DESIGN.md  MANIFEST.in  Makefile  Makefile.pyproject  PRODUCT.md  README.md  cc-lint.defaults.mk  cc-lint.example.mk  collate_stats.py  index.html  mrjob-test.conf  mrjob-test.conf.example  mrjob.conf  mrjob.conf.example  pyproject.toml  report.html  run_mr.py  stats.json
.claude/: CLAUDE.md
.impeccable/: design.json
cc_lint/: __main__.py  cache_control.py  cc_paths.py  cli.py  cooccur.py  cooccur_alphabet.toml  crawling.py  fingerprint.py  fingerprints.toml  header_categories.py  header_census.py  header_families.toml  histograms.py  hll.py  ipasn.py  linting.py  mr.py  note_cooccur.py  patches.py  recipes.py  redact.py  report.py  stats.py  top_sites.py  transition.py  types.py  vary.py
cc_lint/emr/: compat.py  finalize.py  job.py  split_paths.py  timing.py  warc_source.py  warc_worker.py
cc_lint/report/: __init__.py  markdown.py  render.py  sections.py  severity.py  styles.py
docs/: code-review.md  emr-review.md
tests/: test_cache_control.py  test_cooccur.py  test_emr_finalize.py  test_emr_job.py  test_emr_warc_source.py  test_emr_warc_worker.py  test_fingerprint.py  test_header_categories.py  test_header_census.py  test_hll.py  test_ipasn.py  test_linter.py  test_note_cooccur.py  test_note_vars.py  test_recipes.py  test_report.py  test_stats.py  test_top_sites.py  test_transition.py  test_vary.py
tests/fixtures/: warc.paths.txt
