[project]
name = "cc-lint"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "Lint CSS and HTML for Common Crawl"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "httplint>=2026.5.2",
    "warcio",
    "boto3",
    "click",
    "requests",
    "idna",
    "python-dateutil",
    "tomli; python_version < '3.11'",
    "typing_extensions; python_version < '3.11'"
]

[project.optional-dependencies]
emr = [
    "mrjob",
    "tqdm"
]
dev = [
    "cc-lint[emr]",
    "mypy",
    "black",
    "isort",
    "pylint",
    "pytest",
    "pytest-md",
    "validate-pyproject",
    "build",
    "types-requests",
    "types-python-dateutil",
    "types-tqdm",
    "boto3-stubs[s3]"
]

[project.urls]
homepage = "https://github.com/mnot/cc-lint"

[project.scripts]
cc-lint = "cc_lint.cli:cli"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "cc_lint.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cc_lint = ["py.typed", "fingerprints.toml", "header_families.toml"]

[[tool.mypy.overrides]]
module = [
    "warcio.*",
    "mrjob.*",
    "botocore.*",
    "boto3.*"
]
ignore_missing_imports = true


